src/objects/ISSP_Operational_Calendar_Disclaimer__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in ISSP Operational calendar page.
This CS defines a disclaimer to be shown on the calendar page, based on Country and Operation Type</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country ISO code</description>
        <label>Country</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label name which contains the disclaimer</description>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <description>Type of operation of an operational calendar record</description>
        <label>Operation Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ISSP Operational Calendar Disclaimer</label>
    <listViews>
        <fullName>All_with_details</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Operation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with details</label>
        <language>en_US</language>
    </listViews>
</CustomObject>